log
Thu 14 Sep 2023 04:24:13 AM UTC: 
 tests:  1|8
total_score: 0/70
344db7a
Thu 14 Sep 2023 04:40:27 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
89e83e3
Thu 14 Sep 2023 04:40:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: ‘new’ undeclared (first use in this function)
   41 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6e5b292
Thu 14 Sep 2023 04:40:53 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3c7fb31
Thu 14 Sep 2023 04:42:15 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
45854bb
Thu 14 Sep 2023 05:01:56 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:9: error: unused variable ‘resultado’ [-Werror=unused-variable]
   81 |     int resultado = tree->lower_than(tree->root,key);
      |         ^~~~~~~~~
treemap.c:85:8: error: ‘resultado’ undeclared (first use in this function)
   85 |     if(resultado == 1)
      |        ^~~~~~~~~
treemap.c:85:8: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
2bf9763
Thu 14 Sep 2023 05:02:34 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
418e827
Thu 14 Sep 2023 05:04:27 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:16: error: ‘t’ undeclared (first use in this function)
   97 |     resultado =t ree->lower_than(tree->current,key);
      |                ^
treemap.c:97:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:97:17: error: expected ‘;’ before ‘ree’
   97 |     resultado =t ree->lower_than(tree->current,key);
      |                 ^~~~
      |                 ;
Compilation failed
f55b0d2
Thu 14 Sep 2023 05:05:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
f7261d1
Thu 14 Sep 2023 05:05:58 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
c4b8321
Thu 14 Sep 2023 05:06:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
0d02abf
Thu 14 Sep 2023 05:08:51 AM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/70
e33e031
Thu 14 Sep 2023 05:09:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
aacb455
Thu 14 Sep 2023 05:21:29 AM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|7
total_score: 5/70
8c90939
Thu 14 Sep 2023 05:23:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ed51d93
Thu 14 Sep 2023 05:37:41 AM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
dd70e6f
Thu 14 Sep 2023 05:41:52 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
403dbe4
Thu 14 Sep 2023 06:10:39 AM UTC: 
 treemap.c | 37 ++++++++++++++++++++++++++++++++++---
 1 file changed, 34 insertions(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
1503e71
Thu 14 Sep 2023 06:11:47 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
3c5d704
Thu 14 Sep 2023 06:21:27 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:103:3: error: expected ‘,’ or ‘;’ before ‘tree’
  103 |   tree->current = tree->root;
      |   ^~~~
Compilation failed
f1c7cc9
Thu 14 Sep 2023 06:21:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
db57e33
Thu 14 Sep 2023 04:02:28 PM UTC: 
 treemap.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:109:32: error: ‘new’ undeclared (first use in this function)
  109 |         tree->current->right = new;
      |                                ^~~
treemap.c:109:32: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:98:7: error: unused variable ‘rightOrLeft’ [-Werror=unused-variable]
   98 |   int rightOrLeft;
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fafb32f
Thu 14 Sep 2023 04:03:20 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
e311dce
Fri 15 Sep 2023 04:46:50 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
3afe1ce
Fri 15 Sep 2023 02:25:59 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  15|4
total_score: 25/70
66f3b7b
Fri 15 Sep 2023 02:31:25 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:63:23: error: expected ‘;’ before ‘:’ token
   63 |       free(tree->root):
      |                       ^
      |                       ;
Compilation failed
4f5baa2
Fri 15 Sep 2023 02:31:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
b8d2a19
